Bug 386488 - Subwindow mode: minimizing/restoring or maximizing/unmaximizing file with unsaved changes makes titlebar asterisk (*) disappear
Summary: Subwindow mode: minimizing/restoring or maximizing/unmaximizing file with uns...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 3.3.1
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-03 09:04 UTC by Amir Adar
Modified: 2019-05-03 11:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Amir Adar 2017-11-03 09:04:16 UTC
To reproduce:

1. Go to Settings > Configure Krita... > General > Window, and make sure that Multiple Document Mode is set to Subwindows.
2. Create a new document.
3. Draw something on the document so as to have an asterisk (*) show on the main window titlebar to indicate unsaved changes.
4. Maximize, unmaximize, minimize or restore the subwindow.

Expected result: as long as the document is in focus, the asterisk should be displayed in the titlebar until the file is saved.

Actual result: The asterisk disappears when changing the subwindow's status. It only comes back when switching focus away from and back to the subwindow (with another file or with another application).
Comment 1 mvowada 2018-01-20 16:31:08 UTC
(Confirming on Ubuntu 14.04 - Krita 4.0.0-beta1.1.appimage)
Comment 2 Halla Rempt 2019-05-03 11:25:35 UTC
Git commit ff8fc2c2ae92c0a4b731833368082945a2dcc661 by Boudewijn Rempt.
Committed on 03/05/2019 at 11:22.
Pushed by rempt into branch 'master'.

Fix handling of modified markers in subwindow mode

The * marker for modified documents disappeared because subwindows
weren't set using kmainwindow's setCaption method that added the [*]
placeholder.

Now those methods are gone, and we set the placeholder in
KisMainWindow's updateCaption method.

M  +64   -48   libs/ui/KisMainWindow.cpp
M  +1    -1    libs/ui/KisMainWindow.h
M  +0    -19   libs/widgetutils/xmlgui/kmainwindow.cpp
M  +0    -26   libs/widgetutils/xmlgui/kmainwindow.h

https://invent.kde.org/kde/krita/commit/ff8fc2c2ae92c0a4b731833368082945a2dcc661