Fix handling of modified markers in subwindow mode

The * marker for modified documents disappeared because subwindows
weren't set using kmainwindow's setCaption method that added the [*]
placeholder.

Now those methods are gone, and we set the placeholder in
KisMainWindow's updateCaption method.

BUG:386488